[package]
name = "dnb_crawl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive"] }
colored = "2.0.0"
fern = {version = "0.6.1", features = ["chrono", "colored"]}
log = "0.4.17"
rpassword = "7.2.0"
serde_yaml = "0.9.16"
thirtyfour = "0.31.0"
tokio = {version = "1.23.0", features = ["process", "signal", "sync"]}
