[package]
name = "dnb_crawl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde", "std"] }
clap = { version = "4.0.32", features = ["derive"] }
colored = "2.0.0"
fern = {version = "0.6.1", features = ["chrono", "colored"]}
inquire = "0.5.2"
log = "0.4.17"
num-traits = "0.2.15"
serde = "1.0.152"
serde_yaml = "0.9.16"
thirtyfour = "0.31.0"
tokio = {version = "1.23.0", features = ["process", "signal", "sync"]}

# Unix only dependencies
[target.'cfg(target_os = "unix")'.dependencies]
pathsearch = "0.2"

# Windows only dependencies
[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.10"
